Refactor Postman collections and environment files; update API exception handling and client controllers